修改主题为 Huxblog， cordova介绍
https://github.com/Huxpro/huxpro.github.io

--- a/_posts/2016-01-08-hello.md
+++ b/_posts/2016-01-08-hello.md
@@ -1,8 +1,12 @@
 ---
-layout: post
-title:  "Hello"
-date:   2016-01-08
-categories: diary
+layout:     post
+title:      "Hello"
+subtitle:   " \"Hello World, Hello Blog\""
+date:       2016-01-08 0:01:00
+author:     "New"
+header-img: ""
+tags:
+    - 日记
 ---
 
 
