--- a/_posts/2016-01-08-hello.md
+++ b/_posts/2016-01-08-hello.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      "Hello"
 subtitle:   " \"Hello World, Hello Blog\""
-date:       2016-01-08 0:01:00
+date:       2016-01-08 0:01:00+0800
 author:     "New"
 header-img: ""
 tags:
